--- a/items/items_css.css
+++ b/items/items_css.css
@@ -1450,6 +1450,7 @@ span.character27{	background-position: -256px -1408px;}
 
 span.dustbin{	background-position: -0px -1440px;}
 span.chest_transporter{	background-position: -32px -1440px;}
+span.muffler{	background-position: -64px -1440px;}
 
 
 span.effects{
