--- a/items/items_css.css
+++ b/items/items_css.css
@@ -834,6 +834,7 @@ span.diamond_axe{	background-position: -448px -1184px;}
 span.diamond_hoe{	background-position: -480px -1184px;}
 span.diamond_pickaxe{	background-position: -512px -1184px;}
 span.diamond_shovel{	background-position: -544px -1184px;}
+span.map{	background-position: -576px -1184px;}
 span.enchanted_book{	background-position: -608px -1184px;}
 span.ender_eye{	background-position: -640px -1184px;}
 span.fishing_rod{	background-position: -704px -1184px;}
