# 1.9.23 + 修复了胡萝卜钓竿的手持朝向问题。 + 修复了消音器不能正常工作的问题。 + 修复了空岛下杀死生物沙子不会变成灵魂沙的问题。 + 空岛初始给予4个橡树树苗而不是1个。 + 空岛原点平台为修改为基岩，并移除传送用的命令方块。 + 现在空岛出生点附近的生存玩家会直接被传送回家。 + 修复了枯萎的灌木无额外掉落物的问题。 + 枯萎的灌木不再掉落仙人掌、甘蔗、可可豆。 + 修复了展示框内没有物品也会进行仪式的问题。 + 现在空岛合成表在普通模式下也可使用。 + 空岛默认玩家间距修改为10000米。 + 修复了机器下方为墙上的红石火把时不能令机器停止工作的问题。 + 修复了机器上方为激活的压力板时不能令机器停止工作的问题。 + 修复了傀儡战士杀死生物时掉落物位置错误的问题。

--- a/items/items_css.css
+++ b/items/items_css.css
@@ -1146,14 +1146,14 @@ span.break_hand{	background-position: -64px -352px;}
 span.smart_hand{	background-position: -96px -352px;}
 span.angry_hand{	background-position: -128px -352px;}
 span.toughen_hand{	background-position: -160px -352px;}
-span.golem{	background-position: -192px -352px;}
+span.empty_golem{	background-position: -192px -352px;}
 span.golem_farmer{	background-position: -224px -352px;}
 span.golem_miner{	background-position: -256px -352px;}
 
 span.golem_warrior{	background-position: -0px -384px;}
 span.golem_fisher{	background-position: -32px -384px;}
 span.golem_herder{	background-position: -64px -384px;}
-span.equipped_golem{	background-position: -64px -384px;}
+span.golem{	background-position: -64px -384px;}
 span.raw_colorful_vegetable{	background-position: -96px -384px;}
 span.colorful_vegetable{	background-position: -128px -384px;}
 span.raw_braised_pork_with_potatoes{	background-position: -160px -384px;}
