--- a/items/items_css.css
+++ b/items/items_css.css
@@ -1973,6 +1973,9 @@ span.ui a.sea_lantern, a.sea_lantern{
 .mob_hoglin                     {background-position: -160px -2336px;}
 .water                          {background-position: -192px -2336px;}
 .lava                           {background-position: -224px -2336px;}
+.mob_zombie_horse               {background-position: -256px -2336px;}
+.mob_skeleton_horse             {background-position: -000px -2368px;}
+.mob_zombie_pigman              {background-position: -032px -2368px;}
 
 .speed               {background-position: -000px -00px;}
 .slowness            {background-position: -018px -00px;}
