### 生物投影仪 + 现在有几率生成猪灵蛮兵和豹猫。 ### 仪式 + 新增光明修复。 	+ 使用远古仪式的方块，至少2级魔杖。 	+ 消耗8个紫水晶碎片+稀有掉落物将紫水晶块变成紫水晶母岩。

--- a/items/items_css.css
+++ b/items/items_css.css
@@ -1914,27 +1914,27 @@ span.ui a.fire, a.fire{
 .experience_bottle_mode             {background-position: -224px -1504px;}
 .burn_mode                          {background-position: -256px -1504px;}
 .copy_mode                          {background-position: -000px -1536px;}
-.agentia_of_sky                        {background-position: -032px -1536px;}
-.agentia_of_ocean                      {background-position: -064px -1536px;}
-.agentia_of_ridge                      {background-position: -096px -1536px;}
-.agentia_of_dirt                       {background-position: -128px -1536px;}
-.agentia_of_earth                      {background-position: -160px -1536px;}
-.agentia_of_fire                       {background-position: -192px -1536px;}
-.agentia_of_life                       {background-position: -224px -1536px;}
-.agentia_of_lightness                  {background-position: -256px -1536px;}
-.agentia_of_eyesight                   {background-position: -000px -1568px;}
-.agentia_of_fire_shield                {background-position: -032px -1568px;}
-.agentia_of_waterless                {background-position: -064px -1568px;}
-.agentia_of_transparentness                {background-position: -096px -1568px;}
-.agentia_of_bounce                     {background-position: -128px -1568px;}
-.agentia_of_agileness                      {background-position: -160px -1568px;}
-.agentia_of_sharpness                      {background-position: -192px -1568px;}
-.agentia_of_rejuveness                 {background-position: -224px -1568px;}
-.agentia_of_blood                      {background-position: -256px -1568px;}
-.agentia_of_extremeness                    {background-position: -000px -1600px;}
-.agentia_of_shield                     {background-position: -032px -1600px;}
-.agentia_of_tide                       {background-position: -064px -1600px;}
-.agentia_of_chain                      {background-position: -096px -1600px;}
+.agentia_of_sky                     {background-position: -032px -1536px;}
+.agentia_of_ocean                   {background-position: -064px -1536px;}
+.agentia_of_ridge                   {background-position: -096px -1536px;}
+.agentia_of_dirt                    {background-position: -128px -1536px;}
+.agentia_of_earth                   {background-position: -160px -1536px;}
+.agentia_of_fire                    {background-position: -192px -1536px;}
+.agentia_of_life                    {background-position: -224px -1536px;}
+.agentia_of_lightness               {background-position: -256px -1536px;}
+.agentia_of_eyesight                {background-position: -000px -1568px;}
+.agentia_of_fire_shield             {background-position: -032px -1568px;}
+.agentia_of_waterless               {background-position: -064px -1568px;}
+.agentia_of_transparentness         {background-position: -096px -1568px;}
+.agentia_of_bounce                  {background-position: -128px -1568px;}
+.agentia_of_agileness               {background-position: -160px -1568px;}
+.agentia_of_sharpness               {background-position: -192px -1568px;}
+.agentia_of_rejuveness              {background-position: -224px -1568px;}
+.agentia_of_blood                   {background-position: -256px -1568px;}
+.agentia_of_extremeness             {background-position: -000px -1600px;}
+.agentia_of_shield                  {background-position: -032px -1600px;}
+.agentia_of_tide                    {background-position: -064px -1600px;}
+.agentia_of_chain                   {background-position: -096px -1600px;}
 .mob_sheep                          {background-position: -128px -1600px;}
 .mob_cow                            {background-position: -160px -1600px;}
 .mob_mooshroom                      {background-position: -192px -1600px;}
@@ -2198,6 +2198,7 @@ span.ui a.fire, a.fire{
 .basalt_plugin                      {background-position: -224px -2464px;}
 .nether_star                        {background-position: -256px -2464px;}
 .mend_mode                          {background-position: -000px -2496px;}
+.mob_ocelot                         {background-position: -032px -2496px;}
 
 .speed                   {background-position: -000px -00px;}
 .slowness                {background-position: -018px -00px;}
