--- a/items/items_css.css
+++ b/items/items_css.css
@@ -305,16 +305,16 @@ span.fur{
 .fur > a:nth-child(3){top:52px; left:136px;}
 /* 多功能一体机 */
 span.aiom{
-	width:296px; height:152px;
+	width:352px; height:182px;
 	background-image:url("gui/aiom.png");
 }
-.aiom a:nth-child(1){top:24px; left: 24px;}
-.aiom a:nth-child(2){top:60px; left: 24px;}
-.aiom a:nth-child(3){top:24px; left: 78px;}
-.aiom a:nth-child(4){top:24px; left:114px;}
-.aiom a:nth-child(5){top:96px; left: 78px;}
-.aiom a:nth-child(6){top:96px; left:114px;}
-.aiom a:nth-child(7){top:92px; left:240px;}
+.aiom a:nth-child(1){top: 36px; left: 52px;}
+.aiom a:nth-child(2){top: 72px; left: 52px;}
+.aiom a:nth-child(3){top: 36px; left:124px;}
+.aiom a:nth-child(4){top: 36px; left:160px;}
+.aiom a:nth-child(5){top:108px; left:124px;}
+.aiom a:nth-child(6){top:108px; left:160px;}
+.aiom a:nth-child(7){top:104px; left:304px;}
 span.cycle6{
 	width:272px; height:272px;
 	background-image:url("gui/cycle6.png");
@@ -489,10 +489,25 @@ span.ui a.xp_orb, a.xp_orb{
 .amethyst_shard                     {background-position: -288px -384px;}
 .amethyst_block                     {background-position: -352px -384px;}
 .budding_amethyst                   {background-position: -448px -384px;}
+.copper_block                       {background-position: -512px -384px;}
+.lightly_weathered_copper_block     {background-position: -832px -384px;}
 .lightly_weathered_cut_copper_stairs{background-position: -928px -384px;}
 
-.waxed_semi_weathered_cut_copper_slab{background-position: -192px -416px;}
+.semi_weathered_cut_copper_slab     {background-position: -192px -416px;}
+.semi_weathered_copper_block        {background-position: -224px -416px;}
+.semi_weathered_cut_copper_block    {background-position: -256px -416px;}
+.semi_weathered_copper_stairs       {background-position: -288px -416px;}
+.spyglass                           {background-position: -352px -416px;}
+.bundle                             {background-position: -384px -416px;}
+.tinted_glass                       {background-position: -448px -416px;}
+.calcite                            {background-position: -480px -416px;}
+.tuff                               {background-position: -512px -416px;}
 .powder_snow_bucket                 {background-position: -544px -416px;}
+.dripstone                          {background-position: -576px -416px;}
+.pointed_dripstone                  {background-position: -608px -416px;}
+.white_candle                       {background-position: -640px -416px;}
+.yellow_candle                      {background-position: -672px -416px;}
+.weathered_copper_block             {background-position: -768px -416px;}
 
 .copper_ore                         {background-position: -0px -448px;}
 .copper_ingot                       {background-position: -32px -448px;}
@@ -623,6 +638,9 @@ span.ui a.xp_orb, a.xp_orb{
 .iron_bars                          {background-position: -864px -864px;}
 .jungle_planks                      {background-position: -992px -864px;}
 .oak_planks                         {background-position: -192px -896px;}
+.polished_andesite                  {background-position: -320px -896px;}
+.polished_diorite                   {background-position: -352px -896px;}
+.polished_granite                   {background-position: -384px -896px;}
 .purpur_block                       {background-position: -416px -896px;}
 .slime_block                        {background-position: -736px -896px;}
 .smooth_red_sandstone               {background-position: -768px -896px;}
@@ -638,7 +656,6 @@ span.ui a.xp_orb, a.xp_orb{
 .redstone_torch                     {background-position: -768px -928px;}
 .sticky_piston                      {background-position: -832px -928px;}
 .stone_button                       {background-position: -864px -928px;}
-.tripwire_hook                      {background-position: -960px -928px;}
 
 .cracked_stone_bricks               {background-position: -480px -960px;}
 .dark_prismarine                    {background-position: -512px -960px;}
@@ -793,7 +810,6 @@ span.ui a.xp_orb, a.xp_orb{
 .beacon                             {background-position: -544px -1216px;}
 .brewing_stand                      {background-position: -608px -1216px;}
 .cake                               {background-position: -640px -1216px;}
-.cauldon                            {background-position: -672px -1216px;}
 .chest                              {background-position: -704px -1216px;}
 .command_block                      {background-position: -736px -1216px;}
 .daylight_detector                  {background-position: -800px -1216px;}
@@ -805,6 +821,7 @@ span.ui a.xp_orb, a.xp_orb{
 .damaged_anvil                      {background-position: -256px -1248px;}
 .wet_sponge                         {background-position: -288px -1248px;}
 .arrow                              {background-position: -576px -1248px;}
+.tipped_arrow_leaping               {background-position: -736px -1248px;}
 .bow                                {background-position: -992px -1248px;}
 
 .broken_diamond_sword               {background-position: -032px -1280px;}
@@ -855,7 +872,7 @@ span.ui a.xp_orb, a.xp_orb{
 .green_wool                         {background-position: -736px -1504px;}
 .light_blue_wool                    {background-position: -768px -1504px;}
 .light_gray_wool                    {background-position: -800px -1504px;}
-.lime_green_wool                    {background-position: -832px -1504px;}
+.lime_wool                          {background-position: -832px -1504px;}
 .magenta_wool                       {background-position: -864px -1504px;}
 .orange_wool                        {background-position: -896px -1504px;}
 .pink_wool                          {background-position: -928px -1504px;}
@@ -899,6 +916,10 @@ span.ui a.xp_orb, a.xp_orb{
 .cod                                {background-position:-896px -1664px;}
 .salmon                             {background-position:-928px -1664px;}
 .tube_coral_block                   {background-position:-288px -1696px;}
+.brain_coral_block                  {background-position:-320px -1696px;}
+.bubble_coral_block                 {background-position:-352px -1696px;}
+.fire_coral_block                   {background-position:-384px -1696px;}
+.horn_coral_block                   {background-position:-416px -1696px;}
 .tube_coral                         {background-position:-448px -1696px;}
 .trident                            {background-position:-608px -1696px;}
 .brain_coral_fan                    {background-position:-832px -1696px;}
@@ -918,7 +939,7 @@ span.ui a.xp_orb, a.xp_orb{
 .stripped_acacia_wood               {background-position: -704px -2080px;}
 .stripped_dark_oak_wood             {background-position: -736px -2080px;}
 
-.dead_horn_coral_fan                {background-position:-128px -2144px;}
+.dead_horn_coral_fan                {background-position: -128px -2144px;}
 
 .bamboo                             {background-position: -128px -2368px;}
 .black_dye                          {background-position: -192px -2368px;}
@@ -929,10 +950,14 @@ span.ui a.xp_orb, a.xp_orb{
 .wither_rose                        {background-position: -608px -2368px;}
 .cornflower                         {background-position: -640px -2368px;}
 .lily_of_the_valley                 {background-position: -672px -2368px;}
+.banner_pattern                     {background-position: -704px -2368px;}
 .suspicious_stew                    {background-position: -928px -2368px;}
+
+.bell                               {background-position: -256px -2400px;}
 
 .barrel                             {background-position: -064px -2432px;}
 .stone_slab                         {background-position: -224px -2432px;}
+.lantern                            {background-position: -576px -2432px;}
 .sweet_berries                      {background-position: -768px -2432px;}
 .composter                          {background-position: -864px -2432px;}
 
@@ -1178,7 +1203,7 @@ span.ui a.xp_orb, a.xp_orb{
 .sticky_piston                      {background-position: -704px -3328px;}
 .stone_button                       {background-position: -736px -3328px;}
 .stone_pressure_plate               {background-position: -768px -3328px;}
-.trapwire_hook                      {background-position: -800px -3328px;}
+.tripwire_hook                      {background-position: -800px -3328px;}
 .andesite                           {background-position: -832px -3328px;}
 .bone_block                         {background-position: -864px -3328px;}
 .chiseled_stone_bricks              {background-position: -896px -3328px;}
@@ -1430,7 +1455,7 @@ span.ui a.xp_orb, a.xp_orb{
 .beacon                             {background-position: -352px -3584px;}
 .brewing_stand                      {background-position: -384px -3584px;}
 .cake                               {background-position: -416px -3584px;}
-.cauldon                            {background-position: -448px -3584px;}
+.cauldron                           {background-position: -448px -3584px;}
 .chipped_anvil                      {background-position: -480px -3584px;}
 .crafting_table                     {background-position: -512px -3584px;}
 .damaged_anvil                      {background-position: -544px -3584px;}
@@ -2228,6 +2253,13 @@ span.ui a.xp_orb, a.xp_orb{
 .character86                        {background-position: -000px -2624px;}
 .character116                       {background-position: -032px -2624px;}
 .character117                       {background-position: -064px -2624px;}
+.mending_plugin                     {background-position: -096px -2624px;}
+.trade_plugin1                      {background-position: -128px -2624px;}
+.trade_plugin2                      {background-position: -160px -2624px;}
+.trade_plugin3                      {background-position: -192px -2624px;}
+.color_palette                      {background-position: -224px -2624px;}
+.wifi_plugin                        {background-position: -256px -2624px;}
+.dye_stick                          {background-position: -000px -2656px;}
 
 .speed                   {background-position: -000px -00px;}
 .slowness                {background-position: -018px -00px;}
