--- a/items/items_css.css
+++ b/items/items_css.css
@@ -2260,6 +2260,7 @@ span.ui a.xp_orb, a.xp_orb{
 .color_palette                      {background-position: -224px -2624px;}
 .wifi_plugin                        {background-position: -256px -2624px;}
 .dye_stick                          {background-position: -000px -2656px;}
+.mob_axolotl                        {background-position: -032px -2656px;}
 
 .speed                   {background-position: -000px -00px;}
 .slowness                {background-position: -018px -00px;}
