--- a/items/items_css.css
+++ b/items/items_css.css
@@ -2264,6 +2264,21 @@ span.ui a.xp_orb, a.xp_orb{
 .axolotl_head_cyan                  {background-position: -128px -2688px;}
 .axolotl_head_blue                  {background-position: -160px -2688px;}
 .mob_glow_squid                     {background-position: -192px -2688px;}
+.tomato_seedling                    {background-position: -224px -2688px;}
+.strawberry_seedling                {background-position: -256px -2688px;}
+.primrose                           {background-position: -000px -2720px;}
+.forget_me_not                      {background-position: -032px -2720px;}
+.dandelion_bush                     {background-position: -064px -2720px;}
+.tomato0                            {background-position: -096px -2720px;}
+.tomato1                            {background-position: -128px -2720px;}
+.tomato2                            {background-position: -160px -2720px;}
+.tomato3                            {background-position: -192px -2720px;}
+.tomato4                            {background-position: -224px -2720px;}
+.strawberry0                        {background-position: -256px -2720px;}
+.strawberry1                        {background-position: -000px -2752px;}
+.strawberry2                        {background-position: -032px -2752px;}
+.strawberry3                        {background-position: -064px -2752px;}
+.strawberry4                        {background-position: -096px -2752px;}
 
 .speed                   {background-position: -000px -00px;}
 .slowness                {background-position: -018px -00px;}
